fixing broken includes by adding ROOT .

--- a/public/css/styleMain.css
+++ b/public/css/styleMain.css
@@ -75,7 +75,7 @@ input {
 	padding: 0 7% 7% 5%;
 	display: flex;
 	justify-content: center;
-	background-image: url(./images/Hero_mobile_wide.webp);
+	background-image: url(/images/Hero_mobile_wide.webp);
 	background-position: center;
 	background-size: cover;
 	margin-left: 0;
